fixed overflow issue

--- a/home/static/css/sectionStyles.scss
+++ b/home/static/css/sectionStyles.scss
@@ -493,7 +493,6 @@
   }
 
   &__form {
-   width:320px;
    background-color: #F7F7F9;
   }
 
@@ -520,7 +519,7 @@
    align-items: center;
    padding: 12px 16px;
    position: static;
-   width: 280px;
+   // width: 280px;
    height: 46px;
    left: calc(50% - 320px/2);
    top: 196px;
